# MoroccanTransport

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
attached_assets/: Pasted-3-Load-Management-Shippers-can-post-view-and-manage-loads-Carriers-can-view-available-loads--1738253467314.txt  Pasted-import-spawn-from-child-process-import-join-from-path-import-fileURLToPath-from--1738355364498.txt
client/: index.html
client/src/: App.tsx
client/src/components/: carrier-recommendations.tsx  live-tracking.tsx  load-card.tsx  load-tracker.tsx  map-view.tsx  price-suggestion.tsx
client/src/components/layout/: navbar.tsx
client/src/components/map/: VehicleMarker.tsx
client/src/hooks/: use-tracking.ts  use-websocket.ts
client/src/pages/: AboutPage.tsx  LandingPage.tsx  admin-dashboard.tsx  auth-page.tsx  dashboard.tsx  home.tsx  profile.tsx
db/: index.ts  schema.ts
server/: index.ts  openapi.yaml  routes.ts  websocket.ts
server/middleware/: security.ts
server/ml/: index.ts  init_model.py  load_matching.py  pricing.py  rag_utils.py  route_optimization.py
server/types/: index.d.ts
tests/: setup.ts
tests/unit/: App.test.tsx
