[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4.2",
    "numpy>=1.24.0,<2.0",
    "pandas>=2.2.3",
    "scikit-learn==1.4.0",
    "sentence-transformers==2.3.1",
    "torch==2.2.0",
    "transformers==4.37.2",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
